--- a/packages/moonlight-logger-client/package.json
+++ b/packages/moonlight-logger-client/package.json
@@ -8,6 +8,16 @@
   "engines": {
     "node": ">=18"
   },
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atlasfernands/Moonlight-Logger"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "prepare": "npm run build"
