--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "ioredis": "^5.7.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.17.1",
