feat: implementar arquitetura de análise híbrida para logs

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,24 +1,25 @@
-# Configuração do MongoDB
-MONGO_URI=mongodb://localhost:27017/moonlightlogger
+# Configurações do Servidor
+NODE_ENV=development
+PORT=4000
+LOG_LEVEL=info
 
-# Configuração do Redis
+# Banco de Dados
+MONGO_URI=mongodb://localhost:27017/moonlightlogger
 REDIS_URL=redis://localhost:6379
 
-# Porta do servidor
-PORT=4000
+# Configurações de IA
+AI_ENABLED=true
+AI_PROVIDER=auto
+ENABLE_AI_ANALYSIS=true
 
-# Token para autenticação de ingestão de logs
-# Deixe vazio para permitir acesso sem autenticação
-INGEST_TOKEN=your-secure-token-here
+# OpenAI Configuration (opcional)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_BASE_URL=https://api.openai.com/v1
 
-# Provider de IA (opcional)
-# Valores: heuristic, openai, ollama
-AI_PROVIDER=heuristic
+# Configurações de Segurança
+JWT_SECRET=your_jwt_secret_here
+CORS_ORIGIN=http://localhost:3000
 
-# Configurações de OpenAI (se usar)
-# OPENAI_API_KEY=your-openai-api-key
-# OPENAI_MODEL=gpt-3.5-turbo
-
-# Configurações de Ollama (se usar)
-# OLLAMA_URL=http://localhost:11434
-# OLLAMA_MODEL=llama2
+# Configurações de Log
+LOG_RETENTION_DAYS=30
+LOG_BATCH_SIZE=100
