feat: implementa parser inteligente e pipeline híbrido de análise
- Adiciona IntelligentLogParser com suporte a múltiplos formatos (JSON, Nginx, texto)
- Implementa pipeline híbrido de análise (heurísticas + IA opcional)
- Adiciona sistema de stress testing com padrões de tráfego
- Atualiza docker-compose para plataforma de observabilidade completa
- Corrige erros TypeScript no parser e serviços
- Adiciona configuração de análise via config.json
- Implementa captura automática de logs console e erros não tratados

--- a/backend/env.example
+++ b/backend/env.example
@@ -7,12 +7,11 @@ LOG_LEVEL=info
 MONGO_URI=mongodb://localhost:27017/moonlightlogger
 REDIS_URL=redis://localhost:6379
 
-# Configurações de IA
-AI_ENABLED=true
-AI_PROVIDER=auto
-ENABLE_AI_ANALYSIS=true
-
-# OpenAI Configuration (opcional)
+# Configurações de IA - Pipeline Híbrido
+AI_PROVIDER=offline
+# Opções: offline (apenas heurísticas), hybrid (heurísticas + IA), ai-only (apenas IA)
+AI_ENABLED=false
+# OpenAI Configuration (opcional - só usado se AI_PROVIDER != offline)
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_BASE_URL=https://api.openai.com/v1
 
