--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,13 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-  "keywords": ["logger", "ai", "logs", "monitoring", "typescript"],
+  "keywords": [
+    "logger",
+    "ai",
+    "logs",
+    "monitoring",
+    "typescript"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
@@ -29,21 +35,23 @@
     "ioredis": "^5.7.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.17.1",
-    "socket.io": "^4.8.1",
-    "openai": "^4.28.0"
+    "node-fetch": "^3.3.2",
+    "openai": "^4.28.0",
+    "prom-client": "^15.1.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.2.1",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint": "^9.33.0",
-    "prettier": "^3.6.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "ts-jest": "^29.1.2"
+    "prettier": "^3.6.2",
+    "ts-jest": "^29.1.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
   }
 }
