--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "bullmq": "^5.56.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
