--- a/backend/package.json
+++ b/backend/package.json
@@ -1,58 +1,79 @@
 {
-  "name": "backend",
+  "name": "moonlight-logger-backend",
   "version": "1.0.0",
-  "description": "Backend do Moonlight Logger com análise inteligente de logs",
-  "main": "index.js",
+  "description": "Backend inteligente para o Moonlight Logger com análise de IA e alertas automáticos",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc",
     "start": "node dist/server.js",
-    "lint": "eslint . --ext .ts --max-warnings 0",
-    "format": "prettier --write .",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:integration": "jest --config jest.integration.config.js",
+    "test:stress": "node test/stress-test.js",
+    "test:features": "node demo-advanced-features.js",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "type-check": "tsc --noEmit",
+    "type-check:test": "tsc --noEmit -p tsconfig.test.json",
+    "demo": "node demo-advanced-features.js",
+    "simulate-errors": "node simulate-errors.js"
   },
   "keywords": [
-    "logger",
-    "ai",
-    "logs",
-    "monitoring",
-    "typescript"
+    "logging",
+    "ai-analysis",
+    "alerts",
+    "clustering",
+    "trends",
+    "sentiment",
+    "integrations"
   ],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "engines": {
-    "node": ">=18"
-  },
+  "author": "Moonlight Logger Team",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.11.0",
-    "bullmq": "^5.56.9",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
-    "ioredis": "^5.7.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^8.17.1",
-    "node-fetch": "^3.3.2",
-    "openai": "^4.28.0",
-    "prom-client": "^15.1.3",
-    "socket.io": "^4.8.1"
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.5.0",
+    "redis": "^4.6.7",
+    "bullmq": "^4.8.0",
+    "openai": "^4.0.0",
+    "@anthropic-ai/sdk": "^0.7.0",
+    "prometheus-client": "^0.5.1",
+    "winston": "^3.10.0",
+    "joi": "^17.9.2",
+    "rate-limiter-flexible": "^2.4.2",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "nodemailer": "^6.9.4",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.20",
-    "@types/node": "^24.2.1",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
-    "eslint": "^9.33.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.6.2",
-    "ts-jest": "^29.1.2",
+    "@types/express": "^4.17.17",
+    "@types/cors": "^2.8.13",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.5.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.9",
+    "@types/jest": "^29.5.4",
+    "@types/supertest": "^2.0.12",
+    "typescript": "^5.1.6",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
+    "supertest": "^6.3.3",
+    "eslint": "^8.47.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
